--- a/Practice 6/index.html
+++ b/Practice 6/index.html
@@ -9,8 +9,41 @@
 	</head>
 	<body>
 		<div class="header_top">
-			<div class="container">
+			<div class="container-fluid">
+				<nav class="navbar navbar-inverse navbar-static-top no-margin no-padding" role="navigation">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-dip-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					
+					<a class="navbar-brand href="#"><img src="images/logo.png"/></a>
+				</div>
 				
+			<div class="collapse navbar-collapse navbar-right" id="bs-dip-navbar-collapse-1">
+				<ul class="nav navbar-nav nav-tabs">
+					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="index.html">About</a></li>
+					<li><a href="index.html">Contacts</a></li>
+					<li class="dropdown">
+					  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Anubis <span class="caret"></span></a>
+					  <ul class="dropdown-menu">
+						<li><a href="#">Link 1</a></li>
+						<li><a href="#">Link 2</a></li>
+						<li><a href="#">Link 3</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="#">Separated link</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="#">One more separated link</a></li>
+					  </ul>
+					</li>
+				</ul>
+			</div>
+			</div>
+		</nav>
 			</div>
 		</div>
 		
